<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Andruino</string>
    <string name="fullscreen_content">ANDRUINO</string>
    <string name="message_hint">Serial Message</string>
    <string name="send_button">Send</string>
    <string name="connect_button">Connect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="no_conn">No Connection</string>
    <string name="choose_bt">Choose Bluetooth</string>
    
</resources>