<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    tools:context="com.bygorillas.andruino.SerialMessageActivity" >

    <TextView
        android:id="@+id/fullscreen_content"
        style="@style/FullScreenContent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/deviceControlLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" 
                android:layout_weight="1">

                <TextView
                    android:id="@+id/deviceNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:text="@string/no_conn"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/macTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@android:id/text1"
                    android:layout_below="@android:id/text1"
                    android:text="@string/choose_bt"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <Button
                android:id="@+id/connectDisconnectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="scanBT"
                android:text="@string/connect_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/message_hint"
                android:inputType="textNoSuggestions"
                android:enabled="false"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="sendSerialMessage"
                android:text="@string/send_button" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>
    </LinearLayout>

</FrameLayout>